--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -11,7 +11,10 @@
 }
 
 .site-header .site-title {
-  font-size: $h2;
+    width: 1em;
+    font-weight: 800;
+    font-family: $monospace-font-family;
+    line-height: 1.2em;
 }
 
 .site-nav {
