--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -3,6 +3,9 @@
   margin: 0;
 }
 
+.post-content-test{
+  font-size: 0.8em;
+}
 .posts .post {
   margin-bottom: 0.75em;
   border-bottom: thin solid #f3f3f3;
