--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,11 @@
 <header class="site-header px2 px-responsive">
-  <div class="mt2 wrap">
+  <div class="mt2 mb0 wrap">
     <div class="measure">
-      <a href="{{ site.url }}" class="site-title caps">{{ site.title }}</a>
-      <nav class="site-nav">
+      <!-- <a href="{{ site.url }}" class="site-title caps">{{ site.title }}</a> -->
+      <a href="http://suryamattu.com" class="site-title caps">{{ site.title }}</a>
+ <!--      <nav class="site-nav">
         {% include navigation.html %}
-      </nav>
+      </nav> -->
       <div class="clearfix"></div>
       {% if site.show_social_icons %}
         {% include social_links.html %}
