--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
     <div class="measure">
       <!-- <a href="{{ site.url }}" class="site-title caps">{{ site.title }}</a> -->
       <a href="http://suryamattu.com" class="site-title caps">{{ site.title }}</a>
- <!--      <nav class="site-nav">
+      <nav class="site-nav">
         {% include navigation.html %}
-      </nav> -->
+      </nav>
       <div class="clearfix"></div>
       {% if site.show_social_icons %}
         {% include social_links.html %}
