--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
+    <a href="/contact"> Want to get in touch?</a>
 <!--     	Original theme by
       Theme crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
       &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">Github</a>. -->
