--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,6 +86,11 @@
  {% endif %}
 
  <script type="text/javascript">
+    //  window.onload = function() {
+    //  console.log(window.location.href);
+    //   // init();
+    //   // doSomethingElse();
+    // };
     function hasClass(el, className) {
       if (el.classList)
         return el.classList.contains(className)
@@ -108,6 +113,7 @@
       }
     }
     function filter(tag) {
+          // window.location.href = '/filter/'+tag;
           setActiveTag(tag);
           showContainer(tag);
       }
@@ -142,8 +148,8 @@
            else{
                 addClass(lists[i], 'hidden');
            }
-           console.log(tag)
-           console.log(lists[i].className.split(' '))
+           // console.log(tag)
+           // console.log(lists[i].className.split(' '))
             //
         }
 
