--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="mt2 mb0 wrap">
     <div class="measure">
       <!-- <a href="{{ site.url }}" class="site-title caps">{{ site.title }}</a> -->
-      <a href="http://suryamattu.com" class="site-title caps">{{ site.title }}</a>
+      <a href="https://shreeyashsalunke.github.io/" class="site-title caps">{{ site.title }}</a>
       <nav class="site-nav">
         {% include navigation.html %}
       </nav>
@@ -13,3 +13,4 @@
     </div>
   </div>
 </header>
+ 
