--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,5 +14,6 @@
   {% assign posts = tag | last %}
   <!-- <div>{{t | downcase | replace:" ","-" }} has {{ posts | size }} posts</div> -->
   <a id='{{ t }}-item'class="blog-tag-item" onclick="filter('{{ t }}'); return false;">{{t | downcase }}</a>
+  go to portfolio
 {% endfor %}
 </div>
