--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -15,5 +15,7 @@
   <!-- <div>{{t | downcase | replace:" ","-" }} has {{ posts | size }} posts</div> -->
   <a id='{{ t }}-item'class="blog-tag-item" onclick="filter('{{ t }}'); return false;">{{t | downcase }}</a>
 {% endfor %}
-<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">go to portfolio<a></span>
+<br>
+<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">portfolio<a></span>
+<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">about<a></span>
 </div>
