--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,9 +9,8 @@
     {% endif %}
 {% endfor %} -->
 <div class="tags">
-<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">portfolio<a></span>
-<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">about<a></span>
-<br>
+<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">Visit Portfolio<a></span>
+<br><br>
 {% for tag in site.categories %}
   {% assign t = tag | first %}
   {% assign posts = tag | last %}
