--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
     {% endif %}
 {% endfor %} -->
 <div class="tags">
-<span class="blog-tag-item"><a href="http://shreeyashsalunke.com">Visit Portfolio<a></span>
+<a href="http://shreeyashsalunke.com">Visit Portfolio<a>
 <br><br>
 {% for tag in site.categories %}
   {% assign t = tag | first %}
