--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
     {% endif %}
 {% endfor %} -->
 <div class="tags">
-<a href="http://shreeyashsalunke.com">Visit Portfolio<a>
+<span style:"text-align: right;"><a href="http://shreeyashsalunke.com">Visit Portfolio<a></span>
 <br><br>
 {% for tag in site.categories %}
   {% assign t = tag | first %}
