--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,8 +8,8 @@
         <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
 {% endfor %} -->
-<span style:"text-align:right;"><a href="http://shreeyashsalunke.com" class="blog-tag-item">Visit Portfolio<a>
-
+<span style:"text-align:right; "><a href="http://shreeyashsalunke.com" class="portfolio-link">Visit Portfolio<a>
+<br>
 <div class="tags">
 {% for tag in site.categories %}
   {% assign t = tag | first %}
