--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,7 @@
         <a href="{{ page.url }}">{{ page.title }}</a>
     {% endif %}
 {% endfor %} -->
-<span style:"text-align:right; "><a href="http://shreeyashsalunke.com" class="portfolio-link">Go to Portfolio<a>
+<span style=" margin-left: 90px;""><a href="http://shreeyashsalunke.com" class="portfolio-link" style=" color: #333333; border-bottom: 1px dashed #111;">Go to Portfolio<a>
 <br>
 <div class="tags">
 {% for tag in site.categories %}
