--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -10,7 +10,7 @@
 {% endfor %} -->
 <span style=" margin-left: 90px;""><a href="http://shreeyashsalunke.com" class="portfolio-link" style=" color: #333333; border-bottom: 1px dashed #111;">Go to Portfolio<a>
 <br>
-<div class="tags">
+<div class="tags" style=" padding-top: 20px;>
 {% for tag in site.categories %}
   {% assign t = tag | first %}
   {% assign posts = tag | last %}
